# GCP-Deploy-Kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy_kit/: __init__.py  cli.py  config.py  firebase_hosting.py  gcp_artifact_registry.py  gcp_auth.py  gcp_bq.py  gcp_cloud_run.py  gcp_gcs.py  gcp_project.py  gcp_secrets.py  gcp_sql.py  logging_utils.py  orchestrator.py  subprocess_utils.py
deploy_kit/examples/: __init__.py  env.infra.example  env.secrets.example  env.services.example
tests/: conftest.py  test_config.py  test_gcp_artifact_registry.py  test_orchestrator.py  test_subprocess_utils_progress.py
